[package]
name = "opengraph-image"
version = "0.1.0"
edition = "2024"
license = "BlueOak-1.0.0"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
anyhow = "1"
base64 = "0.22"
http = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
ril = { version = "0.10", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
sha1 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
