[package]
name = "opengraph-image"
version = "0.1.0"
edition = "2024"
license = "BlueOak-1.0.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
base64 = "0.22"
console_error_panic_hook = { version = "0.1.1" }
http = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
ril = { version = "0.10", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_urlencoded = "0.7.1"
sha1 = "0.10"
thiserror = "1"
worker = { version = "0.5.0", features = ['http'] }
worker-macros = { version = "0.5.0", features = ['http'] }

# These builds will take slightly longer, but the resulting binary is about half
# the size, which is a nice win!
[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
